--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -50,15 +50,16 @@
         <center> 
           <h1>Ning Shi (石宁)</h1> 
           <a href="mailto:MrShininnnnn@gmail.com"><img src="/assets/images/envelope-solid.svg" width="15px"> MrShininnnnn[at]gmail[dot]com |</a>
-          <a href="https://mrshininnnnn.github.io/"><img src="/assets/images/home-solid.svg" width="15px"> Homepage </a> | 
+          <a href="https://www.shininglab.ai/"><img src="/assets/images/home-solid.svg" width="15px"> Homepage </a> | 
+          <a href="https://twitter.com/MrShininnnnn"><img src="/assets/images/twitter-brands.svg" width="15px"> Twitter </a> | 
           <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/linkedin-brands.svg" width="15px"> LinkedIn </a> | 
-          <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
           <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a> | 
+          <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
           <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
           <br>
           Senior Algorithm Engineer, Alibaba Group <br> 
           Incoming Ph.D. Student, Computer Science, University of Alberta <br> 
-          Updated on Apr. 26, 2022 <br> 
+          Updated on May 13, 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -66,28 +67,28 @@
 
         <p id="title_left"><b> University of Alberta </b></p>
         <p id="title_right"><b> Edmonton, Canada </b></p>
-        <li><p id="left"> Doctor of Philosophy in Computer Science </p>
-        <p id="right"><i> Sep. 2022 - Now </i></p></li>
+        <li><p id="left"> Doctor of Philosophy in Computing Science </p>
+        <p id="right"><i> Sep. 2022 - May 2026 Expected </i></p></li>
 
         <p id="title_left"><b> Georgia Institute of Technology </b></p>
         <p id="title_right"><b> Atlanta, USA </b></p>
         <li><p id="left"> Master of Science in Computer Science </p>
-        <p id="right"><i> Sep. 2019 - May. 2022 </i></p></li>
+        <p id="right"><i> Sep. 2019 - May 2022 </i></p></li>
 
         <p id="title_left"><b> Syracuse University </b></p>
         <p id="title_right"><b> Syracuse, USA </b></p>
         <li><p id="left"> Master of Science in Applied Data Science </p>
-        <p id="right"><i> Sep. 2018 - May. 2021 </i></p></li>
+        <p id="right"><i> Sep. 2018 - May 2021 </i></p></li>
 
         <p id="title_left"><b> New York University </b></p>
         <p id="title_right"><b> New York, USA </b></p>
         <li><p id="left"> Master of Science in Management and Systems </a>
-        <p id="right"><i> Sep. 2016 - May. 2018 </i></p></li>
+        <p id="right"><i> Sep. 2016 - May 2018 </i></p></li>
 
         <p id="title_left"><b> Donghua University </b></p>
         <p id="title_right"><b> Shanghai, China </b></p>
         <li><p id="left"> Bachelor of Management in Electronic Commerce </p>
-        <p id="right"><i> Sep. 2010 - Jun. 2014 </i></p></li>
+        <p id="right"><i> Sep. 2010 - June 2014 </i></p></li>
 
         <h1 id="section"> Experience</h1>
         <hr noshade>
@@ -96,14 +97,15 @@
         <p id="title_right"><b> Hangzhou, China </b></p> 
         <p id="title_left"> Senior Algorithm Engineer </p> 
         <p id="title_right"><i> Nov. 2020 - Now </i></p>
+        <li> Worked as the owner of a proactive conversational chatbot </li>
         <li> Explored cool applications of NLP in Security. </li>
 
         <p id="title_left"><b> Shining Lab </b></p> 
         <p id="title_right"><b> Shanghai, China </b></p> 
         <p id="title_left"> Founder </p> 
         <p id="title_right"><i> Sep. 2019 - Now </i></p>
-        <li> Directed the team to research on cutting edge innovation in AI. </li>
-        <li> Until now (Dec. 2021), 3 papers published at top conferences, and 3 under peer review. </li>
+        <li> Directed the team to research cutting-edge innovation in AI. </li>
+        <li> Published 3 papers at top conferences until Dec. 2021. </li> 
 
         <p id="title_left"><b> Learnable, Inc. </b></p>
         <p id="title_right"><b> Boston, USA </b></p>
@@ -135,43 +137,43 @@
         <li> Collaborated with developers to drive product development and took responsibility in product lifecycle management. </li>
         <li> Maintained and optimized existing procedure and team training program. </li>
 
-        <h1 id="section"> Research & Projects </h1>
+        <h1 id="section"> Selected Projects </h1>
         <hr noshade>
 
         <p id="title_left"><b> Alibaba Group</b>, Proactive Conversational AI </p>
         <p id="title_right"><b> Nov. 2020 - Now </b></p>
         <li> The owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
-        <li> Directed the team to develop algorithm APIs to interactivate with message systems for two IM applications. </li>
-        <li> Applied the forefront studies in our chatbot and identified thousands of hidden illegal commodity transactions over 10+ risk points so far. </li>
+        <li> Directed the team to build service APIs interacting with the message systems of two IM applications. </li>
+        <li> Followed and applied the forefront studies in the dialogue system and identified thousands of hidden illegal transactions over 20+ risk points. </li>
 
-        <p id="title_left"><b> Alibaba Group</b>, Reinforcement Learning in Text Editing </p>
-        <p id="title_right"><b> Aug. 2021 - Now </b></p>
-        <li> Defined text editing as a solvable Markov decision process. </li>
-        <li> Investigated how to deal with text editing with the assistance of RL methods. </li>
+        <!-- <p id="title_left"><b> Alibaba Group</b>, Reinforcement Learning in Text Editing </p> -->
+        <!-- <p id="title_right"><b> Aug. 2021 - Now </b></p> -->
+        <!-- <li> Defined text editing as a solvable Markov decision process. </li> -->
+        <!-- <li> Investigated how to deal with text editing with the assistance of RL methods. </li> -->
 
-        <p id="title_left"><b> Shining Lab</b>, From SCAN to Real Data: Systematic Generalization via Meaningful Learning </p>
-        <p id="title_right"><b> Apr. 2021 - Now </b></p>
-        <li> Revisited systematic generalization by investigating one-shot generalization via semantic linking. </li> 
-        <li> Tested modern seq2seq models, including RNNs, CNNs, and Transformers on SCAN, with inductive and deductive learning principles. </li>
-        <li> Found that such kind of systematic generalization via semantic linking is the evidence to support vocabulary data augmentation. </li>
+        <!-- <p id="title_left"><b> Shining Lab</b>, From SCAN to Real Data: Systematic Generalization via Meaningful Learning </p> -->
+        <!-- <p id="title_right"><b> Apr. 2021 - Now </b></p> -->
+        <!-- <li> Revisited systematic generalization by investigating one-shot generalization via semantic linking. </li>  -->
+        <!-- <li> Tested modern seq2seq models, including RNNs, CNNs, and Transformers on SCAN, with inductive and deductive learning principles. </li> -->
+        <!-- <li> Found that such kind of systematic generalization via semantic linking is the evidence to support vocabulary data augmentation. </li> -->
 
-        <p id="title_left"><b> Shining Lab</b>, Incorporating External POS Tagger for Punctuation Restoration </p>
-        <p id="title_right"><b> Jul. 2020 - Mar. 2021 </b></p>
-        <li> Proposed a  novel framework to employ an external POS tagger to provide syntactic information for better punctuation restoration. </li> 
-        <li> Examined a wide range of pre-trained LMs in a fair and comparable setting, including BERT, RoBERTa, and Funnel Transformer. </li>
-        <li> Showed that our method can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. </li>
+        <!-- <p id="title_left"><b> Shining Lab</b>, Incorporating External POS Tagger for Punctuation Restoration </p> -->
+        <!-- <p id="title_right"><b> Jul. 2020 - Mar. 2021 </b></p> -->
+        <!-- <li> Proposed a  novel framework to employ an external POS tagger to provide syntactic information for better punctuation restoration. </li>  -->
+        <!-- <li> Examined a wide range of pre-trained LMs in a fair and comparable setting, including BERT, RoBERTa, and Funnel Transformer. </li> -->
+        <!-- <li> Showed that our method can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. </li> -->
         
-        <p id="title_left"><b> Shining Lab</b>, Recurrent Inference in Text Editing </p>
-        <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p>
-        <li> Proposed a novel method to edit text through a recurrent inference process. </li> 
-        <li> Introduced a suite of three controlled synthetic benchmark tasks. </li> 
-        <li> Conducted extensive experiments and showed significant gains over conventional inference methods. </li>
+        <!-- <p id="title_left"><b> Shining Lab</b>, Recurrent Inference in Text Editing </p> -->
+        <!-- <p id="title_right"><b> Mar. 2020 - Jun. 2020 </b></p> -->
+        <!-- <li> Proposed a novel method to edit text through a recurrent inference process. </li>  -->
+        <!-- <li> Introduced a suite of three controlled synthetic benchmark tasks. </li>  -->
+        <!-- <li> Conducted extensive experiments and showed significant gains over conventional inference methods. </li> -->
 
         <p id="title_left"><b> Learnable, Inc.</b>, Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </p>
         <p id="title_right"><b> Jun, 2019 - Nov, 2019 </b></p>
-        <li> Cleaned, tokenized, and managed math corpus from HTML-embeded raw data. </li> 
+        <li> Cleaned, processed, and managed math corpus from HTML-embedded raw data. </li> 
         <li> Applied and improved masked language modeling (e.g., BERT) for universal use of pre-trained representation. </li> 
-        <li> Maintained the training environment and computing resources. </li> 
+<!--         <li> Maintained the training environment and computing resources. </li>  -->
 
         <p id="title_left"><b> Learnable, Inc.</b>, Post-Processing for Deep Learning Based Optical Character Recognition </p>
         <p id="title_right"><b> Apr, 2019 - Aug, 2019 </b></p>
@@ -183,21 +185,21 @@
         <p id="title_left"><b> Learnable, Inc.</b>, Knowledge Points Tagging for High School Exam Questions </p>
         <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
         <li> Developed SQL pipeline to manage the 14 Million Question Bank. </li> 
-        <li> Explored various multi-label classification approaches and proposed hierarchical inference. </li> 
+        <li> Explored various multi-label multi-class classification approaches and proposed hierarchical inference. </li> 
 
-        <p id="title_left"><b> New York University</b>, The Relationship of Academic Capital and Mendeley Altmetrics </p>
-        <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p>
-        <li> Quantified the academic capital of an article’s author based on Elsevier research metrics. </li> 
-        <li> Examined relationships of academic capital features and Mendeley Readership. </li> 
-        <li> Reported the influence of the first authors’ citations on articles’ reader count. </li>
+        <!-- <p id="title_left"><b> New York University</b>, The Relationship of Academic Capital and Mendeley Altmetrics </p> -->
+        <!-- <p id="title_right"><b> Jul, 2018 - Apr, 2019 </b></p> -->
+        <!-- <li> Quantified the academic capital of an article’s author based on Elsevier research metrics. </li>  -->
+        <!-- <li> Examined relationships of academic capital features and Mendeley Readership. </li>  -->
+        <!-- <li> Reported the influence of the first authors’ citations on articles’ reader count. </li> -->
 
-        <p id="title_left"><b> Pythagoras Investment Management LLC</b>, Pythagoras Digital Funds Trading Systems </p>
-        <p id="title_right"><b> Dec. 2017 - May. 2018 </b></p>
+        <!-- <p id="title_left"><b> Pythagoras Investment Management LLC</b>, Pythagoras Digital Funds Trading Systems </p> -->
+        <!-- <p id="title_right"><b> Dec. 2017 - May. 2018 </b></p> -->
 
-        <p id="title_left"><b> New York University</b>, AIChallenger English-Chinese Machine Translation </p>
-        <p id="title_right"><b> Sep. 2017 - May. 2018 </b></p> 
+        <!-- <p id="title_left"><b> New York University</b>, AIChallenger English-Chinese Machine Translation </p> -->
+        <!-- <p id="title_right"><b> Sep. 2017 - May. 2018 </b></p>  -->
 
-        <p id="title_left"><b> New York University</b>, HackNYU Lung Cancer Detection Using Deep Learning </p>
+        <!-- <p id="title_left"><b> New York University</b>, HackNYU Lung Cancer Detection Using Deep Learning </p> -->
         <p id="title_right"><b> Mar. 2017 - Apr. 2017 </b></p> 
 
         <h1 id="section"> Publications</h1>
@@ -235,8 +237,7 @@
         <h1 id="section"> Services </h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
-        <p id="left"> Reviewer of ACL Rolling Review 2021 - Nov. Dec. </p>
-        <p id="left"> Reviewer of ACL Rolling Review 2022 </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2021, 2022</p>
         <p id="left"> Reviewer of ICML 2022 </p>
         <p id="left"> Reviewer of NeurIPS 2022 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
