update main page

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -200,7 +200,7 @@
         <!-- <p id="title_right"><b> Sep. 2017 - May. 2018 </b></p>  -->
 
         <!-- <p id="title_left"><b> New York University</b>, HackNYU Lung Cancer Detection Using Deep Learning </p> -->
-        <p id="title_right"><b> Mar. 2017 - Apr. 2017 </b></p> 
+        <!-- <p id="title_right"><b> Mar. 2017 - Apr. 2017 </b></p>  -->
 
         <h1 id="section"> Publications</h1>
         <hr noshade>
