--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -142,10 +142,11 @@
 
         <p id="title_left"><b> Alibaba Group</b>, Proactive Conversational AI </p>
         <p id="title_right"><b> Nov. 2020 - Now </b></p>
-        <li> The owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
+        <li> Served as the owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
         <li> Directed the team to build service APIs interacting with the message systems of two IM applications. </li>
-        <li> Followed and applied the forefront studies in the dialogue system and identified thousands of hidden illegal transactions over 20+ risk points. </li>
-
+        <li> Followed, improved and applied the forefront studies in the dialogue system. </li>
+        <li> Our service helped identify thousands of hidden illegal transactions over 20+ risk points on a monthly basis. </li>
+        
         <!-- <p id="title_left"><b> Alibaba Group</b>, Reinforcement Learning in Text Editing </p> -->
         <!-- <p id="title_right"><b> Aug. 2021 - Now </b></p> -->
         <!-- <li> Defined text editing as a solvable Markov decision process. </li> -->
@@ -228,7 +229,7 @@
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li><b>Ning Shi</b></li>
         <li> Advisors: Farid Razzak and Thomas Christo. </li>
-        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University. </li>
+        <li> A thesis submitted in partial fulfillment of the requirements for the master's degree at New York University. </li>
 
         <h1 id="section"> Talks </h1>
         <p id="title_left"><b> Recurrent Inference in Text Editing</b>, Fourth Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
