--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -237,8 +237,9 @@
 
         <h1 id="section"> Services </h1>
         <hr noshade>
-        <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
         <p id="left"> Reviewer of ACL Rolling Review 2021, 2022</p>
+        <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
+        <p id="left"> Reviewer of EMNLP 2022 </p>
         <p id="left"> Reviewer of ICML 2022 </p>
         <p id="left"> Reviewer of NeurIPS 2022 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
