--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -56,10 +56,9 @@
           <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a> | 
           <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
           <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
-          <br>
-          Senior Algorithm Engineer, Alibaba Group <br> 
+          <br> 
           Incoming Ph.D. Student, Computer Science, University of Alberta <br> 
-          Updated on May 13, 2022 <br> 
+          Updated on July 15, 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -93,12 +92,12 @@
         <h1 id="section"> Experience</h1>
         <hr noshade>
 
-        <p id="title_left"><b> Alibaba Group </b></p> 
-        <p id="title_right"><b> Hangzhou, China </b></p> 
-        <p id="title_left"> Senior Algorithm Engineer </p> 
-        <p id="title_right"><i> Nov. 2020 - Now </i></p>
-        <li> Worked as the owner of a proactive conversational chatbot </li>
-        <li> Explored cool applications of NLP in Security. </li>
+        <p id="title_left"><b> University of Alberta </b></p> 
+        <p id="title_right"><b> Edmonton, Canada </b></p> 
+        <p id="title_left"> Research Assistant </p> 
+        <p id="title_right"><i> Sep. 2022 - Now </i></p>
+        <p id="title_left"> Teaching Assistant </p> 
+        <p id="title_right"><i> Sep. 2022 - Now </i></p>
 
         <p id="title_left"><b> Shining Lab </b></p> 
         <p id="title_right"><b> Shanghai, China </b></p> 
@@ -106,6 +105,13 @@
         <p id="title_right"><i> Sep. 2019 - Now </i></p>
         <li> Directed the team to research cutting-edge innovation in AI. </li>
         <li> Published 3 papers at top conferences until Dec. 2021. </li> 
+
+        <p id="title_left"><b> Alibaba Group </b></p> 
+        <p id="title_right"><b> Hangzhou, China </b></p> 
+        <p id="title_left"> Senior Algorithm Engineer </p> 
+        <p id="title_right"><i> Nov. 2020 - Jul. 2022 </i></p>
+        <li> The owner of a proactive chatbot for violation detection. </li>
+        <li> Explored cool applications of NLP in Security. </li>
 
         <p id="title_left"><b> Learnable, Inc. </b></p>
         <p id="title_right"><b> Boston, USA </b></p>
@@ -207,7 +213,7 @@
         <hr noshade>
 
         <p id="text"><b> From SCAN to Real Data: Systematic Generalization via Meaningful Learning </b></p>
-        <li> <b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, Rong Zhang, Hui Xue, Xinbing Wang, Zhouhan Lin </li>
+        <li> <b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, Rong Zhang, Hui Xue, and Zhouhan Lin </li>
         <li> arXiv, 2021. </li>
 
         <p id="text"><b> Counterfactual Adversarial Learning with Representation Interpolation </b></p>
@@ -232,17 +238,23 @@
         <li> A thesis submitted in partial fulfillment of the requirements for the master's degree at New York University. </li>
 
         <h1 id="section"> Talks </h1>
+        <hr noshade>
         <p id="title_left"><b> Recurrent Inference in Text Editing</b>, Fourth Workshop on Structured Prediction for NLP (SPNLP) 2020 </p>
         <p id="title_right"><b> Nov. 20th, 2020 </b></p> 
 
         <h1 id="section"> Services </h1>
         <hr noshade>
-        <p id="left"> Reviewer of ACL Rolling Review 2021, 2022</p>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
-        <p id="left"> Reviewer of EMNLP 2022 </p>
-        <p id="left"> Reviewer of ICML 2022 </p>
+        <p id="left"> Reviewer of ACL Rolling Review 2021, 2022</p>
         <p id="left"> Reviewer of NeurIPS 2022 </p>
+        <p id="left"> Reviewer of ICML 2022 </p>
+        <p id="left"> Reviewer of EMNLP 2022 </p>
         <p id="left"> DataKind DataDives Volunteer </p>
+
+        <h1 id="section"> Selected Awards </h1>
+        <hr noshade>
+        <p id="title_left"><b> Full Doctoral Scholarship</b>, the Department of Computing Science at the University of Alberta </p>
+        <p id="title_right"><b> Sep. 2022 - May 2026 </b></p> 
 
       </div>
     </div>
