--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -255,7 +255,8 @@
         <hr noshade>
         <p id="title_left"><b> Full Doctoral Scholarship</b>, the Department of Computing Science at the University of Alberta </p>
         <p id="title_right"><b> Sep. 2022 - May 2026 </b></p> 
-
+        <p id="title_left"><b> Graduate Research Assistantship Funds</b>, the Department of Computing Science at the University of Alberta </p>
+        <p id="title_right"><b> Sep. 2022 - Dec. 2022 </b></p> 
       </div>
     </div>
 
