--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -99,12 +99,17 @@
         <p id="title_left"> Teaching Assistant </p> 
         <p id="title_right"><i> Sep. 2022 - Now </i></p>
 
+        <p id="title_left"><b> Beijing Academy of Artificial Intelligence </b></p> 
+        <p id="title_right"><b> Beijing, China </b></p> 
+        <p id="title_left"> Research Intern </p> 
+        <p id="title_right"><i> Aug. 2022 - Now </i></p>
+
         <p id="title_left"><b> Shining Lab </b></p> 
         <p id="title_right"><b> Shanghai, China </b></p> 
         <p id="title_left"> Founder </p> 
         <p id="title_right"><i> Sep. 2019 - Now </i></p>
         <li> Directed the team to research cutting-edge innovation in AI. </li>
-        <li> Published 3 papers at top conferences until Dec. 2021. </li> 
+        <li> Published 6 papers at top conferences until Oct. 2022. </li> 
 
         <p id="title_left"><b> Alibaba Group </b></p> 
         <p id="title_right"><b> Hangzhou, China </b></p> 
@@ -147,7 +152,7 @@
         <hr noshade>
 
         <p id="title_left"><b> Alibaba Group</b>, Proactive Conversational AI </p>
-        <p id="title_right"><b> Nov. 2020 - Now </b></p>
+        <p id="title_right"><b> Nov. 2020 - Jul. 2022 </b></p>
         <li> Served as the owner of the inspection services chatbot for violations detection with the assistance of proactive conversational AI. </li> 
         <li> Directed the team to build service APIs interacting with the message systems of two IM applications. </li>
         <li> Followed, improved and applied the forefront studies in the dialogue system. </li>
@@ -212,30 +217,21 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
-        <p id="text"><b> From SCAN to Real Data: Systematic Generalization via Meaningful Learning </b></p>
-        <li> <b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, Rong Zhang, Hui Xue, and Zhouhan Lin </li>
-        <li> arXiv, 2021. </li>
+        <p id="text"><b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, and Zhouhan Lin. 2022. Systematic Generalization via Meaningful Learning. In <i>Proceedings of the Fifth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP</i>. Association for Computational Linguistics.</p>
 
-        <p id="text"><b> Counterfactual Adversarial Learning with Representation Interpolation </b></p>
-        <li> Wei Wang, Boxin Wang, <b>Ning Shi</b>, Jinfeng Li, Bingyu Zhu, Xiangyu Liu, and Rong Zhang </li>
-        <li> Findings of Empirical Methods in Natural Language Processing (EMNLP Findings), 2021. </li>
+        <p id="text"><b>Ning Shi</b>, Bin Tang, Bo Yuan, Longtao Huang, Yewen Pu, Jie Fu, and Zhouhan Lin. 2022. Text Editing as Imitation Game. In <i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>. Association for Computational Linguistics.</p>
 
-        <p id="text"><b> Incorporating External POS Tagger for Punctuation Restoration </b></p>
-        <li><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, and Zhouhan Lin </li>
-        <li> Conference of the International Speech Communication Association (INTERSPEECH), 2021. </li>
+        <p id="text">Zihan Zhang, Jinfeng Li, <b>Ning Shi</b>, Bo Yuan, Xiangyu Liu, Rong Zhang, Hui Xue, Donghong Sun, and Chao Zhang. 2022. RoChBert: Towards Robust BERT Fine-tuning for Chinese. In <i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>. Association for Computational Linguistics.</p>
 
-        <p id="text"><b> Recurrent Inference in Text Editing </b></p>
-        <li> <b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, and Yichen Gong </li>
-        <li> Findings of Empirical Methods in Natural Language Processing (EMNLP Findings), 2020. </li>
+        <p id="text">Wei Wang, Boxin Wang, <b>Ning Shi</b>, Jinfeng Li, Bingyu Zhu, Xiangyu Liu, and Rong Zhang. 2021. Counterfactual Adversarial Learning with Representation Interpolation. In <i>Findings of the Association for Computational Linguistics: EMNLP 2021</i>, pages 4809–4820, Punta Cana, Dominican Republic. Association for Computational Linguistics.</p>
 
-        <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
-        <li> Keran Zhao, Yingda Lu, <b>Ning Shi</b>, and Yuheng Hu. </li>
-        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS), 2019. </li>
+        <p id="text"><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, and Zhouhan Lin. 2021. Incorporating External POS Tagger for Punctuation Restoration. In <i>Proceedings of Interspeech 2021</i>, pages 1987–1991.</p>
 
-        <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
-        <li><b>Ning Shi</b></li>
-        <li> Advisors: Farid Razzak and Thomas Christo. </li>
-        <li> A thesis submitted in partial fulfillment of the requirements for the master's degree at New York University. </li>
+        <p id="text"><b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, and Yichen Gong. 2020. Recurrent Inference in Text Editing. In <i>Findings of the Association for Computational Linguistics: EMNLP 2020</i>, pages 1758–1769, Online. Association for Computational Linguistics.</p>
+
+        <p id="text">Keran Zhao, Yingda Lu, <b>Ning Shi</b>, and Yuheng Hu. 2019. The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms. In <i>Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019</i>.</p>
+
+        <p id="text"><b>Ning Shi</b>. 2018. The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count. <i>A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University</i>.
 
         <h1 id="section"> Talks </h1>
         <hr noshade>
@@ -244,12 +240,8 @@
 
         <h1 id="section"> Services </h1>
         <hr noshade>
+        <p id="left"> Reviewer of ACL Rolling Review 2021-2022, NeurIPS 2022, ICML 2022, EMNLP 2022</p>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
-        <p id="left"> Reviewer of ACL Rolling Review 2021, 2022</p>
-        <p id="left"> Reviewer of NeurIPS 2022 </p>
-        <p id="left"> Reviewer of ICML 2022 </p>
-        <p id="left"> Reviewer of EMNLP 2022 </p>
-        <p id="left"> DataKind DataDives Volunteer </p>
 
         <h1 id="section"> Selected Awards </h1>
         <hr noshade>
