--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -57,8 +57,8 @@
           <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
           <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
           <br> 
-          Incoming Ph.D. Student, Computer Science, University of Alberta <br> 
-          Updated on July 15, 2022 <br> 
+          1st-year Ph.D. Student, Computing Science, University of Alberta <br> 
+          Updated on Oct. 15, 2022 <br> 
         </center>
 
         <h1 id="section"> Education</h1>
@@ -218,19 +218,19 @@
         <hr noshade>
 
         <p id="text"><b>Ning Shi</b>, Boxin Wang, Wei Wang, Xiangyu Liu, and Zhouhan Lin. 2022. Systematic Generalization via Meaningful Learning. In <i>Proceedings of the Fifth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP</i>. Association for Computational Linguistics.</p>
-
+        <br> 
         <p id="text"><b>Ning Shi</b>, Bin Tang, Bo Yuan, Longtao Huang, Yewen Pu, Jie Fu, and Zhouhan Lin. 2022. Text Editing as Imitation Game. In <i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>. Association for Computational Linguistics.</p>
-
+        <br> 
         <p id="text">Zihan Zhang, Jinfeng Li, <b>Ning Shi</b>, Bo Yuan, Xiangyu Liu, Rong Zhang, Hui Xue, Donghong Sun, and Chao Zhang. 2022. RoChBert: Towards Robust BERT Fine-tuning for Chinese. In <i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>. Association for Computational Linguistics.</p>
-
+        <br> 
         <p id="text">Wei Wang, Boxin Wang, <b>Ning Shi</b>, Jinfeng Li, Bingyu Zhu, Xiangyu Liu, and Rong Zhang. 2021. Counterfactual Adversarial Learning with Representation Interpolation. In <i>Findings of the Association for Computational Linguistics: EMNLP 2021</i>, pages 4809–4820, Punta Cana, Dominican Republic. Association for Computational Linguistics.</p>
-
+        <br> 
         <p id="text"><b>Ning Shi</b>, Wei Wang, Boxin Wang, Jinfeng Li, Xiangyu Liu, and Zhouhan Lin. 2021. Incorporating External POS Tagger for Punctuation Restoration. In <i>Proceedings of Interspeech 2021</i>, pages 1987–1991.</p>
-
+        <br> 
         <p id="text"><b>Ning Shi</b>, Ziheng Zeng, Haotian Zhang, and Yichen Gong. 2020. Recurrent Inference in Text Editing. In <i>Findings of the Association for Computational Linguistics: EMNLP 2020</i>, pages 1758–1769, Online. Association for Computational Linguistics.</p>
-
+        <br> 
         <p id="text">Keran Zhao, Yingda Lu, <b>Ning Shi</b>, and Yuheng Hu. 2019. The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms. In <i>Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS) 2019</i>.</p>
-
+        <br> 
         <p id="text"><b>Ning Shi</b>. 2018. The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count. <i>A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University</i>.
 
         <h1 id="section"> Talks </h1>
@@ -240,8 +240,8 @@
 
         <h1 id="section"> Services </h1>
         <hr noshade>
-        <p id="left"> Reviewer of ACL Rolling Review 2021-2022, NeurIPS 2022, ICML 2022, EMNLP 2022</p>
-        <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
+        <p id="text"> Reviewer of ACL Rolling Review 2021-2022, NeurIPS 2022, ICML 2022, EMNLP 2022 </p>
+        <p id="text"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
 
         <h1 id="section"> Selected Awards </h1>
         <hr noshade>
